--- a/ft-ality.cabal
+++ b/ft-ality.cabal
@@ -19,7 +19,8 @@ extra-source-files:  CHANGELOG.md
 executable ft-ality
   main-is:             Main.hs
   other-modules:       StateMachine,
-                       EventHandler
+                       EventHandler,
+                       Utils
   build-depends:       base >=4.13 && <4.14,
                        sdl2
   hs-source-dirs:      .
